<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="40dp"
    android:layout_marginRight="40dp"
    android:layout_marginTop="60dp"
    android:layout_marginBottom="40dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/_x31_0_1" />

        <TextView
            android:id="@+id/judulIntro"
            android:layout_below="@id/imageView"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="16dp"
            android:text="@string/judulIntro"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/judulIntro"
            android:layout_marginTop="16dp"
            android:text="@string/textview_email"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewEmail"
            android:layout_marginTop="8dp"
            android:background="@drawable/input"
            android:hint="@string/input_email"
            android:inputType="text|textAutoComplete"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingStart="15dp"/>

        <TextView
            android:id="@+id/textViewNamaLengkap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/textview_nama"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextnama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:background="@drawable/input"
            android:hint="@string/input_nama"
            android:inputType="text|textAutoComplete"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingStart="15dp"/>
        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Password"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#8D8D8D"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewPassword"
                android:layout_marginTop="8dp"
                android:background="@drawable/input"
                android:inputType="text|textPassword|textAutoComplete"
                android:textSize="15sp"
                android:textStyle="bold"
                android:hint="@string/masukkan_password"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/textViewKonfirmasiPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/konfirmasi_password"
            android:textStyle="bold"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/konfirmasiPasswordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#8D8D8D">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextKonfirmasiPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewKonfirmasiPassword"
                android:layout_marginTop="8dp"
                android:background="@drawable/input"
                android:inputType="text|textPassword|textAutoComplete"
                android:textSize="15sp"
                android:textStyle="bold"
                android:hint="@string/masukkan_konfirmasi_password"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/buttonDaftar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextKonfirmasiPassword"
            android:layout_marginTop="16dp"
            android:backgroundTint="#008080"
            android:text="Daftar"
            app:cornerRadius="16dp" />
    </LinearLayout>
</RelativeLayout>