<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop= "150dp"
    android:layout_marginBottom="150dp"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/_x31_0_1" />
        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/judulIntro"
            android:layout_marginTop="16dp"
            android:text="@string/textview_email"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewEmail"
            android:layout_marginTop="8dp"
            android:background="@drawable/input"
            android:hint="@string/input_email"
            android:inputType="text|textAutoComplete"
            android:textSize="15sp"
            android:textStyle="bold"
            android:paddingStart="15dp"/>
        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Password"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#8D8D8D"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textViewPassword"
                android:layout_marginTop="8dp"
                android:background="@drawable/input"
                android:inputType="text|textPassword|textAutoComplete"
                android:textSize="15sp"
                android:textStyle="bold"
                android:hint="@string/masukkan_password"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/konfirmasiPasswordLoginTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#8D8D8D">
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="#008080"
            android:text="Login"
            app:cornerRadius="16dp" />
        <Button
            android:id="@+id/buttonDaftar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Daftar"
            android:textSize="12sp"
            android:paddingVertical="20dp"
            android:textStyle="bold"
            android:backgroundTint="@color/white"
            android:textColor="#008080"/>
    </LinearLayout>

</RelativeLayout>
